la couleur de fondgit add .

--- a/fich1.html
+++ b/fich1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="fich1.css">
 </head>
 <body>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi consequuntur expedita cupiditate porro qui distinctio sint doloribus nihil unde alias deleniti magnam asperiores voluptate nobis, sapiente cumque repellat modi.</p>
