La taille des polices

--- a/fich1.html
+++ b/fich1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="fich1.css">
 </head>
 <body>
+    <h1>ma 1ere page html css</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi consequuntur expedita cupiditate porro qui distinctio sint doloribus nihil unde alias deleniti magnam asperiores voluptate nobis, sapiente cumque repellat modi.</p>
 </body>
 </html>
