Aligner du text

--- a/fich1.html
+++ b/fich1.html
@@ -9,6 +9,8 @@
 <body>
     <h1>ma 1ere page html css</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRS0IQhVr9DDJCq61QX28zCoiqDrvezBh5ylw&s">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi consequuntur expedita cupiditate porro qui distinctio sint doloribus nihil unde alias deleniti magnam asperiores voluptate nobis, sapiente cumque repellat modi.</p>
+    <div class="parag">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi consequuntur expedita cupiditate porro qui distinctio sint doloribus nihil unde alias deleniti magnam asperiores voluptate nobis, sapiente cumque repellat modi.</p>
+    </div>
 </body>
 </html>
