--- a/fich1.html
+++ b/fich1.html
@@ -9,8 +9,12 @@
 <body>
     <h1>ma 1ere page html css</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRS0IQhVr9DDJCq61QX28zCoiqDrvezBh5ylw&s">
-    <div class="parag">
+    <div>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi consequuntur expedita cupiditate porro qui distinctio sint doloribus nihil unde alias deleniti magnam asperiores voluptate nobis, sapiente cumque repellat modi.</p>
+    </div>
+    <div class="coins_arrondis">
+        <h2>2eme titre html css</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni hic placeat sed voluptatibus deserunt laborum, id sapiente quis dolore a voluptatem quia veritatis culpa doloribus repudiandae aut odio labore suscipit!</p>
     </div>
 </body>
 </html>
