--- a/fich1.html
+++ b/fich1.html
@@ -14,6 +14,7 @@
     </div>
     <div class="coins_arrondis">
         <h2>2eme titre html css</h2>
+        <h4><a hraf="bonjour">Bonjour tout le monde</a></h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni hic placeat sed voluptatibus deserunt laborum, id sapiente quis dolore a voluptatem quia veritatis culpa doloribus repudiandae aut odio labore suscipit!</p>
     </div>
 </body>
