--- a/fich1.html
+++ b/fich1.html
@@ -9,7 +9,7 @@
 <body>
     <h1>ma 1ere page html css</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRS0IQhVr9DDJCq61QX28zCoiqDrvezBh5ylw&s">
-    <div>
+    <div class="found-image">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi consequuntur expedita cupiditate porro qui distinctio sint doloribus nihil unde alias deleniti magnam asperiores voluptate nobis, sapiente cumque repellat modi.</p>
     </div>
     <div class="coins_arrondis">
